# UELocTool

./: README.md  pyproject.toml
.grzybdev/: app.json
ueloctool/: helpers.py  main.py
ueloctool/api/: handler.py  helpers.py  magic.py  string.py
ueloctool/api/enumerators/: data_format.py  export.py  missing_string.py
ueloctool/api/formats/locres/: main.py  namespace.py  string.py  version.py
