[tool.poetry]
name = "ueloctool"
version = "0.1.0"
description = ""
authors = ["Marek Grzyb <marek@grzyb.dev>"]
readme = "README.md"

[tool.poetry.scripts]
ueloctool = "ueloctool.main:app"

[tool.poetry.dependencies]
python = "^3.13"
polib = "^1.2.0"
cityhash = "^0.4.7"


[tool.poetry.group.cli.dependencies]
typer = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
